[package]
name = "poseidon2-program"
version.workspace = true
edition.workspace = true

[dependencies]
sp1-poseidon2-bn256.workspace = true
sp1-zkvm.workspace = true

# Greatly reduces cycle count when executing the zkVM program
# Also reflected in script/build.rs
[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
debug = 1
